--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,16 @@
-version: "2"
+version: "3"
 services:
+  mongo:
+    image: mongo
+    environment:
+      - MONGO_INITDB_DATABASE=CTDatabase
+    volumes:
+      - 'C:/data/db:/data/db:rw'
+      - './launcher/mongod.conf:/etc/mongod.conf'
+    ports:
+      - '27017-27019:27017-27019'
   launcher:
     build: .
     ports:
       - "8080:8080"
-  mongo:
-    image: mongo
+
