--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ Flask-Login==0.4.1
 Flask-MongoAlchemy==0.7.2
 Jinja2==2.10
 MongoAlchemy==0.19
-pymongo==2.8.1
+pymongo==3.9.0
 pytest==4.6.1
 requests==2.22.0
 Werkzeug==0.14.1
+dnspython==1.15.0
