--- a/launcher/requirements.txt
+++ b/launcher/requirements.txt
@@ -1,9 +1,9 @@
-Flask==1.0.2
+Flask==1.1.1
 Flask-Login==0.4.1
-Flask-MongoAlchemy==0.7.2
-Jinja2==2.10
-MongoAlchemy==0.19
-pymongo==2.8.1
+Jinja2==2.10.3
+pymongo==3.9.0
 pytest==4.6.1
 requests==2.22.0
-Werkzeug==0.14.1
+Werkzeug==0.16.0
+dnspython==1.15.0
+dnspython3==1.15.0
